# swagger/docs/responses.yaml
@@ -249,4 +249,144 @@ components:
         example:
           message: error de servidor.
 
+      getFilmById:
+        type: object
+        properties:
+          id:
+            type: integer
+            example: 6
+          title:
+            type: string
+            example: La casa de Mickey Mouse.
+          image:
+            type: string
+            example: http://picker.com/la-casa-de-mickey.jpg
+          date:
+            type: string
+            example: 20-02-1995
+          rating:
+            type: integer
+            example: 5
+
+      ErrorGetFilmById:
+        type: object
+        properties:
+          message:
+            type: string
+            description: No se encuentra el id en la base de datos.
+        example:
+          message: No se encontró el id 6.
+
+      NotFound:
+        type: object
+        properties:
+          message:
+            type: string
+            description: Error de servidor.
+        example:
+          message: error de servidor.
+
+      getFilmByName:
+        type: object
+        properties:
+          id:
+            type: integer
+            example: 6
+          title:
+            type: string
+            example: La casa de Mickey Mouse
+          image:
+            type: string
+            example: http://picker.com/la-casa-de-mickey.jpg
+          date:
+            type: string
+            example: 20-02-1995
+          rating:
+            type: integer
+            example: 5
+
+      ErrorGetFilmByName:
+        type: object
+        properties:
+          message:
+            type: string
+            description: No se encuentra el title en la base de datos.
+        example:
+          message: No se encontró el title.
+
+      getFilmByGenre:
+        type: array
+        items:  
+          properties:
+            id:
+              type: integer
+              example: 6
+            title:
+              type: string
+              example: La casa de Mickey Mouse
+            image:
+              type: string
+              example: http://picker.com/la-casa-de-mickey.jpg
+            date:
+              type: string
+              example: 20-02-1995
+            rating:
+              type: integer
+              example: 5
+
+        ErrorGetFilmByGenre:
+          type: object
+          properties:
+            message:
+              type: string
+              description: No se encuentran films/movies/series en el género con id:.
+          example:
+            message: no films were found in the genre with id:.
+
+        getCharacterByOrderAsc:
+          type: array
+          items:  
+            properties:
+              id:
+                type: integer
+                example: 6
+              title:
+                type: string
+                example: La casa de Mickey Mouse
+              image:
+                type: string
+                example: http://picker.com/la-casa-de-mickey.jpg
+              date:
+                type: string
+                example: 20-02-1995
+              rating:
+                type: integer
+                example: 5
+
+        getFilmByIdWithCh:
+          type: array
+          items:  
+            properties:
+              id:
+                type: integer
+                example: 6
+              title:
+                type: string
+                example: La casa de Mickey Mouse
+              image:
+                type: string
+                example: http://picker.com/la-casa-de-mickey.jpg
+              date:
+                type: string
+                example: 20-02-1995
+              rating:
+                type: integer
+                example: 5
+              characters:
+                type: array
+                example: [
+                  6ec0bd7f-11c0-43da-975e-2a8ad9ebae0b,
+                  6ec0bd7f-11c0-43da-975e-2a8ad9kjybim
+                ]
+
         
